# diy-neural-network

./: .gitignore  README.md  pom.xml
Neural Network/: .project
Neural Network/src/: Main.java
Neural Network/src/Neuron/: Perceptron.java
Neural Network/src/exampleProblems/: CountingSimulation.java  DigitRecognizingAI.java
Neural Network/src/gui/: PerceptronPanel.java
Neural Network/src/inputProcessers/: GreyscaleImageProcessor.java
Neural Network/src/neuralNetwork/: Perceptron.java  PerceptronSimulation.java  Trainer.java
Neural Network/src/neurons/: BasicNeuron.java  Neuron.java  TransferFunctionNeuron.java
Neural Network/src/shiffmanSinglePerceptron/: BasicPerceptron.java  LinearPerceptron.java  LinearPerceptronPanel.java  LinearPerceptronSimulation.java  QuadraticPerceptron.java  ShiffmanPerceptron.java  ShiffmanPerceptronPanel.java  Trainer.java
Neural Network/src/sigmoidNeuron/: Network.java  SigmoidNeuron.java
Neural Network/src/singlePerceptron/: BasicPerceptron.java  LinearPerceptron.java  LinearPerceptronPanel.java  LinearPerceptronSimulation.java  Perceptron.java  PerceptronPanel.java  PerceptronSimulation.java  QuadraticPerceptron.java  Trainer.java
Neural Network/src/utilities/: IdxReader.java  NeuronException.java  RandomSingleton.java  XmlTool.java
java/: pom.xml
java/Neural Network/src/exampleProblems/: CountingSimulation.java  DigitRecognizingAI.java
java/Neural Network/src/neurons/: BasicNeuron.java  Neuron.java
java/Neural Network/src/shiffmanSinglePerceptron/: ShiffmanPerceptron.java  ShiffmanPerceptronPanel.java  ShiffmanPerceptronSimulation.java
java/Neural Network/src/sigmoidNeuron/: Network.java  SigmoidNeuron.java
java/legacy/: pom.xml
java/modern-ml/: pom.xml
legacy/: pom.xml
modern-ml/: pom.xml
python/: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/models/: .gitkeep
python/scripts/: __init__.py  predict.py  train.py
python/src/diy_neural_network/: __init__.py  config.py  predict.py  train_model.py
python/src/diy_neural_network/datasets/: __init__.py  mnist.py
python/tests/: __init__.py
(+3 files in other folders)
